--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Nordic-master
+gtk-theme-name=Nordic
 gtk-icon-theme-name=Papirus-Dark
 gtk-font-name=Montserrat,  10
 gtk-cursor-theme-name=vimix-cursors
