--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
-[submodule ".zsh/prezto"]
-	path = .zsh/prezto
-	url = git@github.com:elken/prezto
-[submodule "bin"]
-	path = bin
-	url = git@github.com:elken/bin
 [submodule ".doom.d"]
 	path = .doom.d
 	url = git@github.com:elken/.doom.d
 [submodule ".emacs.d"]
 	path = .emacs.d
+	url = https://github.com/plexus/chemacs2
+[submodule ".emacs.doom"]
+	path = .emacs.doom
 	url = https://github.com/hlissner/doom-emacs
+[submodule ".zprezto"]
+	path = .zprezto
+	url = https://github.com/sorin-ionescu/prezto
