--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,18 +1,21 @@
 [Settings]
-gtk-theme-name=Nordic
-gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Montserrat,  10
-gtk-cursor-theme-name=vimix-cursors
+gtk-application-prefer-dark-theme=true
+gtk-button-images=true
+gtk-cursor-theme-name=breeze_cursors
 gtk-cursor-theme-size=24
-gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-button-images=1
-gtk-menu-images=1
+gtk-decoration-layout=:maximize,minimize,close
+gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=0
+gtk-font-name=Overpass,  10
+gtk-icon-theme-name=candy-icons
+gtk-menu-images=true
+gtk-modules=canberra-gtk-module:colorreload-gtk-module
+gtk-primary-button-warps-slider=false
+gtk-theme-name=Nordic
+gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-toolbar-style=3
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
-gtk-application-prefer-dark-theme=0
 gtk-xft-rgba=rgb
-gtk-modules=canberra-gtk-module
