--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,21 +1,19 @@
 [Settings]
-gtk-application-prefer-dark-theme=true
-gtk-button-images=true
-gtk-cursor-theme-name=breeze_cursors
+gtk-application-prefer-dark-theme=0
+gtk-button-images=1
+gtk-cursor-theme-name=Vimix-cursors
 gtk-cursor-theme-size=24
-gtk-decoration-layout=:maximize,minimize,close
+gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=0
-gtk-font-name=Overpass,  10
-gtk-icon-theme-name=candy-icons
-gtk-menu-images=true
-gtk-modules=canberra-gtk-module:colorreload-gtk-module
+gtk-font-name=Noto Sans,  10
+gtk-icon-theme-name=ePapirus-Dark
+gtk-menu-images=1
 gtk-primary-button-warps-slider=false
 gtk-theme-name=Nordic
+gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
-gtk-toolbar-style=3
+gtk-enable-event-sounds=1
+gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=rgb
+gtk-xft-hintstyle=hintmedium
