fix(mpd.conf): change music dir

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -32,7 +32,7 @@ audio_output {
 
 # Files and directories #######################################################
 #
-music_directory    "/run/media/elken/Basement/Music"
+music_directory    "~/Music"
 playlist_directory "~/.config/mpd/playlists"
 db_file            "~/.config/mpd/database"
 log_file           "~/.config/mpd/log"
