fix(mpDris2): point to correct location

--- a/.config/mpDris2/mpDris2.conf
+++ b/.config/mpDris2/mpDris2.conf
@@ -2,7 +2,7 @@
 [Connection]
 host = localhost
 port = 6600
-music_dir = /run/media/elken/Basement/Music/
+music_dir = ~/Music
 
 [Bling]
 notify = False
