fix(git/config): handle work git config
I don't want this versioned; but I only want it to be applied for
specific repos

--- a/.config/git/config
+++ b/.config/git/config
@@ -38,3 +38,6 @@
 	email = "me@elken.dev"
 	name = "Ellis Kenyo"
 	signingKey = "298BE5D997EBAA02"
+
+[includeIf "gitdir:~/build/juxt/**/*.git"]
+	path = ~/build/juxt/.gitconfig
