--- a/.config/zsh/.zpreztorc
+++ b/.config/zsh/.zpreztorc
@@ -92,7 +92,7 @@ zstyle ':prezto:module:editor' key-bindings 'emacs'
 #
 
 # Set the Pacman frontend.
- zstyle ':prezto:module:pacman' frontend 'yay'
+ zstyle ':prezto:module:pacman' frontend 'sudo aura'
 
 #
 # Prompt
