--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,29 +1,18 @@
-set -g status-bg "colour237"
-set -g message-command-fg "colour246"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status "on"
-set -g pane-active-border-fg "colour246"
-set -g message-bg "colour239"
-set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g message-fg "colour246"
-set -g message-command-bg "colour239"
-set -g status-attr "none"
-set -g pane-border-fg "colour239"
-set -g status-left-attr "none"
-setw -g window-status-fg "colour246"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour237"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour246"
-setw -g window-status-separator ""
-setw -g window-status-bg "colour237"
-set -g status-left "#[fg=colour235,bg=colour246] #S #[fg=colour246,bg=colour237,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] %Y-%m-%d  %H:%M #[fg=colour246,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour235,bg=colour246] #h "
-setw -g window-status-format "#[fg=colour246,bg=colour237] #I #[fg=colour246,bg=colour237] #W "
-setw -g window-status-current-format "#[fg=colour237,bg=colour239,nobold,nounderscore,noitalics]#[fg=colour246,bg=colour239] #I #[fg=colour246,bg=colour239] #W #[fg=colour239,bg=colour237,nobold,nounderscore,noitalics]"
+set -g mouse 'on'
 set -g prefix 'C-a'
+
+set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set-environment -g COLORTERM "truecolor"
+
+# keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -36,9 +25,11 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+set -g @plugin 'catppuccin/tmux'
 
 # Plugin conf
 set -g @continuum-restore 'on'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+if "test ! -d ~/.config/tmux/plugins/tpm" \
+"run 'git clone https://github.com/tmux-plugins/tpm ~/.config/tmux/plugins/tpm && ~/.config/tmux/plugins/tpm/bin/install_plugins'"
+      run '~/.config/tmux/plugins/tpm/tpm'
