--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,16 +1,16 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-button-images=1
-gtk-cursor-theme-name=Nordic-cursors
+gtk-cursor-theme-name=Nordzy-cursors
 gtk-cursor-theme-size=24
 gtk-enable-animations=true
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-font-name=Montserrat,  10
-gtk-icon-theme-name=ePapirus-Dark
+gtk-icon-theme-name=Nordzy-purple-dark
 gtk-menu-images=1
 gtk-primary-button-warps-slider=false
-gtk-theme-name=Catppuccin-Mocha-Standard-Red-Dark
+gtk-theme-name=Nordic
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
