--- a/.config/sway/config.d/10-defaults.conf
+++ b/.config/sway/config.d/10-defaults.conf
@@ -14,3 +14,6 @@ workspace 3 output DP-2
 workspace 4 output DP-3
 workspace 5 output DP-3
 workspace 6 output DP-3
+
+# 1, 1, 2, 3, 5, 8
+exec_always --no-startup-id ~/bin/sway/spiral
