feat: add kanshi support
Finally have a need for this, installed ootb on Sericea

--- a/.config/sway/config.d/95-autostart-common.conf
+++ b/.config/sway/config.d/95-autostart-common.conf
@@ -1,8 +1,11 @@
-exec firefox
-exec emacs
+exec flatpak run org.mozilla.Firefox
+exec distrobox enter emacs-build -- emacsclient -cf
 exec flatpak run com.slack.Slack
 exec thunderbird
 exec flatpak run com.spotify.Client
 exec kdeconnect-indicator
+exec kanshi
 
 exec wl-paste --watch cliphist store
+
+exec foot -e tmux; move scratchpad
