--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -10,7 +10,7 @@ gtk-font-name=Montserrat,  10
 gtk-icon-theme-name=Nordzy-purple-dark
 gtk-menu-images=1
 gtk-primary-button-warps-slider=false
-gtk-theme-name=Nordic
+gtk-theme-name=Orchis-Purple-Dark-Nord
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-xft-antialias=1
