fix(helix): add missing d binding
Not sure how I missed that one...

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -45,6 +45,7 @@ X = "extend_line_above"
 # One to toy around with, I prefer the behaviour but I feel like it's a smell
 # esc = ["collapse_selection", "keep_primary_selection"]
 
+d = ["yank_main_selection_to_clipboard", "delete_selection"]
 p = "paste_clipboard_after"
 P = "paste_clipboard_before"
 y = "yank_main_selection_to_clipboard"
