--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -45,16 +45,13 @@ X = "extend_line_above"
 # One to toy around with, I prefer the behaviour but I feel like it's a smell
 # esc = ["collapse_selection", "keep_primary_selection"]
 
-d = ["yank_main_selection_to_clipboard", "delete_selection"]
-p = "paste_clipboard_after"
-P = "paste_clipboard_before"
-y = "yank_main_selection_to_clipboard"
-
 [keys.normal."space".c]
 f = ":open ~/.config/helix"
 r = [":config-reload", ":reload-all"]
 
 [keys.normal.space]
+space = "file_picker_in_current_buffer_directory"
+f = "file_picker"
 z = [
   "goto_first_nonwhitespace",
   "extend_to_line_end",
@@ -67,23 +64,17 @@ n = "goto_next_buffer"
 p = "goto_previous_buffer"
 d = ":buffer-close"
 
+[keys.normal.space.o]
+g = ":sh zrf yl"
+t = ":sh zrf"
+
 [keys.normal.g]
 a = "code_action"
 q = ":reflow"
 g = ":sh zrf lazygit"
-
-[keys.insert]
-C-a = "goto_first_nonwhitespace"
-C-e = "goto_line_end_newline"
-C-f = "move_char_right"
-C-b = "move_char_left"
-C-n = "move_line_down"
-C-p = "move_line_up"
+t = "goto_file_start"
+T = "goto_window_top"
 
 [keys.select]
 k = ["extend_line_up", "extend_to_line_bounds"]
 j = ["extend_line_down", "extend_to_line_bounds"]
-d = ["yank_main_selection_to_clipboard", "delete_selection"]
-y = "yank_main_selection_to_clipboard"
-p = "replace_selections_with_clipboard"
-P = "paste_clipboard_before"
