--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,23 +1,18 @@
 [Settings]
 gtk-application-prefer-dark-theme=true
 gtk-button-images=true
-gtk-cursor-theme-name=Nordzy-cursors
-gtk-cursor-theme-size=32
+gtk-cursor-blink=true
+gtk-cursor-blink-time=1000
+gtk-cursor-theme-name=breeze_cursors
+gtk-cursor-theme-size=24
 gtk-decoration-layout=icon:minimize,maximize,close
 gtk-enable-animations=true
-gtk-enable-event-sounds=1
-gtk-enable-input-feedback-sounds=1
-gtk-font-name=Noto Sans,  10
-gtk-icon-theme-name=breeze-dark
+gtk-font-name=Noto Sans,  11
+gtk-icon-theme-name=Papirus-Dark
 gtk-menu-images=true
-gtk-modules=colorreload-gtk-module
+gtk-modules=colorreload-gtk-module:window-decorations-gtk-module
 gtk-primary-button-warps-slider=true
 gtk-sound-theme-name=ocean
-gtk-theme-name=Orchis-Purple-Dark-Nord
-gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
+gtk-theme-name=Breeze
 gtk-toolbar-style=3
-gtk-xft-antialias=1
 gtk-xft-dpi=98304
-gtk-xft-hinting=1
-gtk-xft-hintstyle=hintfull
-gtk-xft-rgba=rgb
